# blocks_n_stuff

./: .gitignore  Cargo.toml  FEATURES.md  IDEAS.md  LICENSE.md  README.md  TODO.md
crates/app/: Cargo.toml
crates/app/src/: config.rs  ctx.rs  event_loop.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: block.rs  chunk.rs  lib.rs  texture.rs  utility.rs
crates/image/: Cargo.toml
crates/image/src/: lib.rs  png.rs
crates/log/: Cargo.toml
crates/log/src/: lib.rs  std.rs  wasm.rs
crates/render/: Cargo.toml
crates/render/preprocessor/: Cargo.toml
crates/render/preprocessor/src/: lib.rs
crates/render/src/: color.rs  data.rs  gpu.rs  lib.rs  render.rs  renderer.rs  surface.rs
crates/render/src/renderer/: mod.rs  render.rs
crates/render/src/resources/: dynamic_vertex_buffer.rs  mod.rs  texture.rs
crates/render/src/shaders/: common.rs  frame_uniforms.wgsl  line.rs  line.wgsl  mod.rs  quad.rs  quad.wgsl  skybox.rs  skybox.wgsl  utils.wgsl
crates/render/src/shaders/fog/: fog.wgsl  mod.rs
crates/render/src/shaders/line/: instance.rs  line.wgsl  mod.rs
crates/render/src/shaders/quad/: instance.rs  mod.rs  quad.wgsl  quad_shadow.wgsl  quads.rs
crates/render/src/shaders/skybox/: mod.rs  skybox.wgsl
crates/render/src/shaders/text/: font.rs  instance.rs  mod.rs  text.wgsl
crates/render/src/shaders/ui_atlas_sprite/: instance.rs  mod.rs  ui_atlas_sprite.wgsl
crates/render/src/shaders/ui_sprite/: instance.rs  mod.rs  ui_sprite.wgsl
crates/rng/: Cargo.toml
crates/rng/derive/: Cargo.toml
crates/rng/derive/src/: lib.rs
crates/rng/src/: lib.rs  mixer.rs  system.rs
crates/rng/src/noises/: mixer.rs  mod.rs  simplex.rs  super_simplex.rs  voronoi.rs
crates/rng/src/rngs/: mod.rs  xoshiro256plusplus.rs
crates/rng/src/utility/: convert.rs  mod.rs  primes.rs  splitmix64.rs
crates/workers/: Cargo.toml
crates/workers/src/: lib.rs  no_workers.rs  parking_lot.rs
crates/worldgen-core/: Cargo.toml
crates/worldgen-core/src/: lib.rs
crates/worldgen-std/: Cargo.toml
crates/worldgen-std/src/: biome.rs  biomemap.rs  cache.rs  chunk_gen.rs  column_gen.rs  lib.rs  structure.rs
crates/worldgen-std/src/biomes/: desert.rs  mod.rs  oak_forest.rs  ocean.rs  pine_forest.rs  plains.rs  standard.rs  structures.rs  utility.rs  void.rs
crates/worldgen-std/structures/: big_boulder_1.ron  big_oak_tree_1.ron  boulder_1.ron  boulder_2.ron  boulder_3.ron  lil_house.ron  lil_house_2.ron  oak_tree_1.ron  oak_tree_2.ron  oak_tree_3.ron  oak_tree_4.ron  pine_tree_1.ron  pine_tree_2.ron  village.ron
crates/worldgen-structure/: Cargo.toml
crates/worldgen-structure/macros/: Cargo.toml
crates/worldgen-structure/macros/src/: lib.rs
crates/worldgen-structure/src/: lib.rs
crates/worldgen-structure/types/: Cargo.toml
crates/worldgen-structure/types/src/: lib.rs
src/: app.rs  assets.rs  main.rs  panic.rs  window.rs
src/app/: asset.rs  camera.rs  mod.rs
src/game/: debug.rs  mod.rs  sun.rs  utility.rs
src/game/player/: hud.rs  mod.rs  physics.rs
src/game/player/camera/: mod.rs  perspective.rs  view.rs
src/gfx/: gpu.rs  mod.rs  render_data.rs  render_graph.rs  surface.rs
src/gfx/helpers/: mod.rs  uniform_buffer.rs  vertex_buffer.rs
src/gfx/quad_pipeline/: instance.rs  mod.rs
src/gfx/shaders/: mod.rs  quad.rs  quad.wgsl
src/world/: block.rs  chunk.rs  chunk_geometry.rs  mod.rs
src/world/task_pool/: mod.rs  no_threads.rs  yes_threads.rs
src/worldgen/: climate.rs  mod.rs
structures/: oak_tree_2.ron
