[package]
name = "blocks_n_stuff"
version = "0.1.0"
description = "A Minecraft-inspired game to showcase my graphics programming skills."

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[workspace.package]
edition = "2021"
authors = ["Nils Mathieu <contact@nils-mathieu.fr>"]
repository = "https://github.com/nils-mathieu/blocks_n_stuff"
license = "MIT"
publish = false

[workspace]
members = [
    "crates/core",
    "crates/render",
    "crates/image",
    "crates/rng",
    "crates/rng/derive",
]

[dependencies]
bns-core = { path = "crates/core" }
bns-render = { path = "crates/render" }
bns-image = { path = "crates/image" }
bns-rng = { path = "crates/rng" }

winit = "0.29"
glam = { version = "0.24", features = ["bytemuck"] }
bytemuck = { version = "1", features = [
    "derive",
    "extern_crate_std",
    "min_const_generics",
] }
rustc-hash = "1"
hashbrown = "0.14"
parking_lot = "0.12"
bitflags = "2"
getrandom = "0.2"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.52"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"]
