[package]
name = "blocks_n_stuff"
version = "0.1.0"
description = "A Minecraft-inspired game to showcase my graphics programming skills."

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

# Optimize dependencies, but not the finaly bianry to avoid impacting compile times too much.
[profile.dev.package.'*']
opt-level = 3

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
panic = "abort"

[lints.clippy]
"print_stdout" = "warn"
"print_stderr" = "warn"

[workspace.package]
edition = "2021"
authors = ["Nils Mathieu <contact@nils-mathieu.fr>"]
repository = "https://github.com/nils-mathieu/blocks_n_stuff"
license = "MIT"
publish = false

[workspace]
members = [
    "crates/core",
    "crates/render",
    "crates/image",
    "crates/rng",
    "crates/rng/derive",
    "crates/worldgen-core",
    "crates/worldgen-std",
    "crates/worldgen-structure",
    "crates/workers",
    "crates/log",
    "crates/app",
]

[dependencies]
bns-core = { path = "crates/core" }
bns-render = { path = "crates/render" }
bns-image = { path = "crates/image" }
bns-rng = { path = "crates/rng" }
bns-worldgen-core = { path = "crates/worldgen-core" }
bns-worldgen-std = { path = "crates/worldgen-std" }
bns-worldgen-structure = { path = "crates/worldgen-structure" }
bns-workers = { path = "crates/workers" }
bns-log = { path = "crates/log" }
bns-app = { path = "crates/app" }

glam = "0.24"
rustc-hash = "1"
hashbrown = "0.14"
bitflags = "2"
smallvec = "1"
quanta = "0.12"
bytemuck = "1"
profiling = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
ron = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Blob",
    "Response",
    "Url",
    "Element",
    "HtmlAnchorElement",
] }
wasm-bindgen-futures = "0.4"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.52"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"]
