[package]
name = "bns-core"
version = "0.1.0"

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bytemuck = { version = "1", features = [
    "derive",
    "extern_crate_std",
    "min_const_generics",
] }
glam = "0.24"
bitflags = "2"
