[package]
name = "bns-rng"
version = "0.1.0"

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bns-rng-derive = { path = "derive" }
profiling = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
