[package]
name = "bns-workers"
version = "0.1.0"

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
parking_lot = "0.12"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
