[package]
name = "bns-worldgen-std"
version = "0.1.0"

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bns-core = { path = "../core" }
bns-worldgen-core = { path = "../worldgen-core" }
bns-rng = { path = "../rng" }
