[package]
name = "bns-worldgen-std"
version = "0.1.0"

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bns-core = { path = "../core" }
bns-worldgen-core = { path = "../worldgen-core" }
bns-worldgen-structure = { path = "../worldgen-structure" }
bns-rng = { path = "../rng" }

glam = "0.24"
bytemuck = { version = "1", features = ["derive"] }
smallvec = "1"
hashbrown = "0.14"
rustc-hash = "1"
parking_lot = { version = "0.12", features = ["arc_lock"] }
profiling = "1"
