[package]
name = "bns-worldgen-structure"
version = "0.1.0"

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["macros"]
macros = ["dep:bns-worldgen-structure-macros"]

[dependencies]
bns-core = { path = "../core" }
bns-worldgen-structure-types = { path = "types" }
bns-worldgen-structure-macros = { path = "macros", optional = true }
